Alignment issue fix

--- a/property-portal-webapp/src/webapp/WEB-INF/views/css/style.css
+++ b/property-portal-webapp/src/webapp/WEB-INF/views/css/style.css
@@ -4037,7 +4037,7 @@ margin-left:5%;
 }
 
 .user_register > ul > li > label{
-    min-width: 80px;
+    min-width: 180px;
 }
 .ad_post .appendGrid{
     display: inline-block;
